--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do | Make Plan</title>
+    <title>To-Do</title>
     <link href="./output.css" rel="stylesheet" />
     <link rel="icon" href="photos/project.png" type="project/png"/>
   </head>
