--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>To-Do</title>
   <link href="./output.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-  <link rel="icon" href="photos/project.png" type="project/png" />
+  <link rel="icon" href="photos/todo-logo.png" type="project/png" />
 </head>
 
 <body class="bg-gray-900 text-white">
